--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,15 @@
-numpy==1.21.4
-opencv_python==4.5.4.58
-Pillow==9.0.0
+beautifulsoup4==4.11.1
+numpy==1.21.6
+opencv_python==4.6.0.66
+Pillow==9.3.0
 PyAutoGUI==0.9.53
+PyBluez==0.23
 pyfiglet==0.8.post1
-pyglet==1.5.21
+pyglet==1.3.2
+pyperclip==1.8.2
+pyserial==3.5
 pyttsx3==2.90
+requests==2.28.1
 SpeechRecognition==3.8.1
 wikipedia==1.4.0
 winshell==0.6
